--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+body {
+  background-color: #e6f4ea; 
+  margin: 0;
+  font-family: 'Arial', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  max-width: 400px;
+  margin-top: 50px;
+  padding: 20px;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 128, 0, 0.5);
+}
+.container form {
+  max-width: 300px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container input:focus {
+  border-color: #28a745;
+  outline: none;
+  box-shadow: 0 0 5px #28a745;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container .btn {
+  width: 100%;
+  max-width: 300px;
+  margin: 5px auto;
+  display: block;
+}
+.container .btn.btn-primary {
+  background-color: #28a745;
+  border-color: #28a745;
+}
+
+.btn-primary:hover {
+  background-color: #218838;
+  border-color: #1e7e34;
+}
+
+.btn-outline-secondary {
+  color: #28a745;
+  border-color: #28a745;
+}
+
+.btn-outline-secondary:hover {
+  background-color: #28a745;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  background-color: #28a745;
+  color: white;
+  padding: 10px 0;
+  text-align: center;
 }
